Node editor Map Uv requires an scale node to work #39189

Closed
opened 2014-03-14 17:13:45 +01:00 by Nahuel Belich · 9 comments

System Information
windows x64
kubuntu

Blender Version
Broken:2.69.8 Hash: c925b5b -- 2.69 Hash: 41e70cf -- 2.7 rc hash: 2525f9c
Worked: 2.69.0 is r60991

Short description of error

it seams that now its needed to reescale the image using a node before distorting so it distorts wrongly, in this case the texture/image covers just a bit of the plane, if the render size its 500% larger it would cover al the plane but the image will be cropped

Exact steps for others to reproduce the error

1- open the attached file
2- do a quick render
3- try both nodes threes at the node editor

NOTE: this reference image was done before doing the test file, its not the same but it shows the problem, notice how the texture instead of cover the entire plane covers just a bit of it
Reference image
http://www.pasteall.org/pic/show.php?id=68254
MAP_UV_save_in_2-70rc2.blend

**System Information** windows x64 kubuntu **Blender Version** Broken:2.69.8 Hash: c925b5b -- 2.69 Hash: 41e70cf -- 2.7 rc hash: 2525f9c Worked: 2.69.0 is r60991 **Short description of error** it seams that now its needed to reescale the image using a node before distorting so it distorts wrongly, in this case the texture/image covers just a bit of the plane, if the render size its 500% larger it would cover al the plane but the image will be cropped **Exact steps for others to reproduce the error** 1- open the attached file 2- do a quick render 3- try both nodes threes at the node editor NOTE: this reference image was done before doing the test file, its not the same but it shows the problem, notice how the texture instead of cover the entire plane covers just a bit of it Reference image http://www.pasteall.org/pic/show.php?id=68254 [MAP_UV_save_in_2-70rc2.blend](https://archive.blender.org/developer/F81137/MAP_UV_save_in_2-70rc2.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Author

for some reason i cant edit the info
this is the image reference file
http://www.pasteall.org/pic/68254

for some reason i cant edit the info this is the image reference file http://www.pasteall.org/pic/68254

Added subscriber: @intracube

Added subscriber: @intracube

Confirmed here on Linux x86_64. This issue can be tracked back to at least revision b2fdc59 (2013-12-20).

Confirmed here on Linux x86_64. This issue can be tracked back to at least revision b2fdc59 (2013-12-20).
Lukas Tönne self-assigned this 2014-03-15 08:59:28 +01:00

This issue was referenced by blender/blender-addons-contrib@caf5d90fb0

This issue was referenced by blender/blender-addons-contrib@caf5d90fb07d2aee5cdb49635ec726ae22df6c78

This issue was referenced by caf5d90fb0

This issue was referenced by caf5d90fb07d2aee5cdb49635ec726ae22df6c78
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit caf5d90fb0.

Closed by commit caf5d90fb0.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39189
No description provided.